--- a/.github/workflows/binary-release.yml
+++ b/.github/workflows/binary-release.yml
@@ -34,8 +34,8 @@ jobs:
           prerelease: false
 
       - 
-        name: Upload Release Asset
-        id: upload-release-asset 
+        name: Upload Release Asset Darwin
+        id: upload-release-asset1
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -46,8 +46,8 @@ jobs:
           asset_content_type: application/gzip
 
       - 
-        name: Upload Release Asset
-        id: upload-release-asset 
+        name: Upload Release Asset Linux
+        id: upload-release-asset2
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -58,8 +58,8 @@ jobs:
           asset_content_type: application/gzip
 
       - 
-        name: Upload Release Asset
-        id: upload-release-asset 
+        name: Upload Release Asset Windows
+        id: upload-release-asset3
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
