--- a/.github/workflows/binary-release.yml
+++ b/.github/workflows/binary-release.yml
@@ -2,9 +2,8 @@ name: binary-release
 
 on:
   push:
-    # Sequence of patterns matched against refs/tags
     tags:
-    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    - 'v*'
 
 jobs:
   docker:
@@ -16,7 +15,7 @@ jobs:
       - name: Generate build files
         uses: thatisuday/go-cross-build@v1
         with:
-            platforms: 'linux/amd64, darwin/amd64, windows/amd64'
+            platforms: 'linux/amd64, darwin/amd64, darwin/arm64, windows/amd64'
             package: 'cmd'
             name: 'logshark'
             compress: 'true'
@@ -32,6 +31,17 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+      - 
+        name: Upload Release Asset Apple Silicon
+        id: upload-release-asset1
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./dist/logshark-darwin-arm64.tar.gz
+          asset_name: logshark-darwin-arm64.tar.gz
+          asset_content_type: application/gzip
 
       - 
         name: Upload Release Asset Darwin
@@ -40,7 +50,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/logshark-darwin-amd64.tar.gz
           asset_name: logshark-darwin-amd64.tar.gz
           asset_content_type: application/gzip
@@ -52,9 +62,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
           asset_path: ./dist/logshark-linux-amd64.tar.gz
-          asset_name: logshark-darwin-linux-amd64.tar.gz
+          asset_name: logshark-linux-amd64.tar.gz
           asset_content_type: application/gzip
 
       - 
@@ -64,7 +74,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/logshark-windows-amd64.tar.gz
           asset_name: logshark-windows-amd64.tar.gz
           asset_content_type: application/gzip
