--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Generate build files
         uses: thatisuday/go-cross-build@v1
         with:
-            platforms: 'linux/amd64, darwin/amd64, darwin/arm64, windows/amd64'
+            platforms: 'linux/amd64, darwin/amd64, windows/amd64'
             package: 'cmd'
             name: 'logshark'
             compress: 'true'
@@ -31,17 +31,7 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-      - 
-        name: Upload Release Asset Apple Silicon
-        id: upload-release-asset-m1
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: ./dist/logshark-darwin-arm64.tar.gz
-          asset_name: logshark-darwin-arm64.tar.gz
-          asset_content_type: application/gzip
+
 
       - 
         name: Upload Release Asset Darwin
@@ -78,3 +68,23 @@ jobs:
           asset_path: ./dist/logshark-windows-amd64.tar.gz
           asset_name: logshark-windows-amd64.tar.gz
           asset_content_type: application/gzip
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ugosan/logshark
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
