--- a/test/filebeat.yml
+++ b/test/filebeat.yml
@@ -1,10 +1,10 @@
 filebeat.inputs:
 - type: log
   paths:
-    - /var/log/*.log
+    - /tmp/log.log
 
 logging.level: debug
 filebeat.registry.path: registry
 
 output.elasticsearch:
-  hosts: ["http://127.0.0.1:8080"]
+  hosts: ["http://host.docker.internal:8080"]
