--- a/test/pipeline.conf
+++ b/test/pipeline.conf
@@ -45,6 +45,7 @@ output {
 
 
   elasticsearch {
-    hosts => ["http://localhost:8080"]
+    hosts => ["http://host.docker.internal:8080"]
+    index => "logshark"
   }
 }
