--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -12,6 +12,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.19.0' 
+
+      - name: Run build Linux amd64
+        run: GOOS=linux GOARCH=amd64 go build -buildmode exe -ldflags="-w -s" -o ./dist/linux-amd64/logshark ./cmd
+      
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
