--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -42,7 +42,7 @@ jobs:
         run: tar -cvzf logshark-windows-amd64.tar.gz -C ./dist/windows-amd64 .
 
       - name: Create Release
-        uses: actions/create-release@v1
+        uses: ncipollo/release-action@v1.11.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -60,7 +60,6 @@ jobs:
           asset_path: logshark-darwin-amd64-${{ github.ref }}.tar.gz
           asset_name: logshark-darwin-amd64-${{ github.ref }}.tar.gz
           asset_content_type: application/gzip
-
 
       - name: Upload Release Asset Mac M1
         uses: actions/upload-release-asset@v1
@@ -91,3 +90,4 @@ jobs:
           asset_path: logshark-windows-amd64-${{ github.ref }}.tar.gz
           asset_name: logshark-windows-amd64-${{ github.ref }}.tar.gz
           asset_content_type: application/gzip
+
