--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -21,25 +21,25 @@ jobs:
         run: GOOS=darwin GOARCH=amd64 go build -buildmode exe -ldflags="-w -s" -o ./dist/darwin-amd64/logshark ./cmd
 
       - name: gzip mac amd64
-        run: tar -cvzf logshark-darwin-amd64.tar.gz -C ./dist/darwin-amd64 .
+        run: tar -cvzf logshark-darwin-amd64-${{ github.ref_name }}.tar.gz -C ./dist/darwin-amd64 .
 
       - name: Run build MAC M1
         run: GOOS=darwin GOARCH=arm64 go build -buildmode exe -ldflags="-w -s" -o ./dist/darwin-m1/logshark ./cmd
 
       - name: gzip mac M1
-        run: tar -cvzf logshark-darwin-M1.tar.gz -C ./dist/darwin-m1 .
+        run: tar -cvzf logshark-darwin-arm64-${{ github.ref_name }}.tar.gz -C ./dist/darwin-m1 .
 
       - name: Run build Linux amd64
         run: GOOS=linux GOARCH=amd64 go build -buildmode exe -ldflags="-w -s" -o ./dist/linux-amd64/logshark ./cmd
 
       - name: gzip Linux amd64
-        run: tar -cvzf logshark-linux-amd64.tar.gz -C ./dist/linux-amd64 .
+        run: tar -cvzf logshark-linux-amd64-${{ github.ref_name }}.tar.gz -C ./dist/linux-amd64 .
 
       - name: Run build Windows amd64
         run: GOOS=windows GOARCH=amd64 go build -buildmode exe -ldflags="-w -s" -o ./dist/windows-amd64/logshark.exe ./cmd
 
       - name: gzip Windows amd64
-        run: tar -cvzf logshark-windows-amd64.tar.gz -C ./dist/windows-amd64 .
+        run: tar -cvzf logshark-windows-amd64-${{ github.ref_name }}.tar.gz -C ./dist/windows-amd64 .
 
       - name: Create Release
         id: create_release
@@ -58,8 +58,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: logshark-darwin-amd64-${{ github.ref }}.tar.gz
-          asset_name: logshark-darwin-amd64-${{ github.ref }}.tar.gz
+          asset_path: logshark-darwin-amd64-${{ github.ref_name }}.tar.gz
+          asset_name: logshark-darwin-amd64-${{ github.ref_name }}.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload Release Asset Mac M1
@@ -68,8 +68,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: logshark-darwin-arm64-${{ github.ref }}.tar.gz
-          asset_name: logshark-darwin-arm64-${{ github.ref }}.tar.gz
+          asset_path: logshark-darwin-arm64-${{ github.ref_name }}.tar.gz
+          asset_name: logshark-darwin-arm64-${{ github.ref_name }}.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload Release Asset Linux
@@ -78,8 +78,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: logshark-linux-amd64-${{ github.ref }}.tar.gz
-          asset_name: logshark-linux-amd64-${{ github.ref }}.tar.gz
+          asset_path: logshark-linux-amd64-${{ github.ref_name }}.tar.gz
+          asset_name: logshark-linux-amd64-${{ github.ref_name }}.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload Release Asset Windows
@@ -88,7 +88,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: logshark-windows-amd64-${{ github.ref }}.tar.gz
-          asset_name: logshark-windows-amd64-${{ github.ref }}.tar.gz
+          asset_path: logshark-windows-amd64-${{ github.ref_name }}.tar.gz
+          asset_name: logshark-windows-amd64-${{ github.ref_name }}.tar.gz
           asset_content_type: application/gzip
 
