--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,3 +92,22 @@ jobs:
           asset_name: logshark-windows-amd64-${{ github.ref_name }}.tar.gz
           asset_content_type: application/gzip
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ugosan/logshark
+
+      - name: Build and push
+        uses: docker/build-push-action@v3.2.0
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
